--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>MyAppNg</title>
-    <base href="/" />
+    <base
+      href="/Weather-App-UsingA
+    ngular  "
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
