--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <title>MyAppNg</title>
     <base
-      href="/Weather-App-UsingA
-    ngular  "
+      href="/Weather-App-UsingAngular"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
