Weather App Using Angular

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MyAppNg</title>
-    <base
-      href="/Weather-App-UsingAngular"
-    />
+    <title>Weather Wise</title>
+    <base href="/Weather-App-UsingAngular" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.iconscout.com/icon/free/png-512/free-cloudy-weather-11-1147979.png?f=webp&w=256"
+    />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
